# aery

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
backend/: Cargo.toml  wrangler.toml
backend/src/: assets.rs  cache.rs  error.rs  game.rs  lib.rs  summoner.rs
core/: Cargo.toml
core/examples/: summoner.rs  timeline.rs
core/src/: account.rs  assets.rs  client.rs  game.rs  game_match.rs  lib.rs  summoner.rs
core/src/assets/: champion.rs  emblem.rs  item.rs  rune.rs  spell.rs
core/src/game/: item.rs  player.rs  rune.rs  team.rs
core/src/summoner/: league.rs
data/reusables/: master.md
desktop/: Cargo.toml  index.html
desktop/assets/data/: profileicon.json  summoner.json
desktop/src/: assets.rs  component.rs  formatting.rs  main.rs  theme.rs  widget.rs
desktop/src/component/: game.rs  ranked_overview.rs  search_bar.rs  summoner.rs  timeline.rs
desktop/src/screen/: profile.rs  search_bar.rs
desktop/src/screen/profile/: game.rs  ranked_overview.rs  search_bar.rs  summoner.rs  timeline.rs
desktop/src/widget/: game.rs  modal.rs  ranked_overview.rs  search_bar.rs  timeline.rs
src/: assets.rs  formatting.rs  main.rs  screen.rs  theme.rs  widget.rs
src/screen/: profile.rs  search_bar.rs
src/screen/profile/: game.rs  ranked_overview.rs  summary.rs  summoner.rs  timeline.rs
src/widget/: menu.rs  pick_list.rs
