[package]
name = "aery"
description = "An open source, performant and ad-free companion app for League of Legends"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aery_core.workspace = true
itertools.workspace = true
tracing.workspace = true
image.workspace = true
serde_json.workspace = true
dotenv_codegen.workspace = true
futures.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[features]
dummy = ["aery_core/dummy"]

[workspace]
members = ["core"]

[workspace.package]
version = "0.1.0"
authors = ["Richard <richardcustodio@pm.me>"]
edition = "2024"

[workspace.dependencies]
aery_core = { path = "core" }
itertools = "0.14"
tracing = "0.1"
image = "0.25"
serde_json = "1.0"
dotenv_codegen = "0.15"
futures = "0.3"
reqwest = "0.12"
thiserror = "2.0"
riven = { version = "2.72", features = ["tracing"] }
time = "0.3"
serde = "1.0"
bitcode = "0.6"
bytes = "1.10"
lz4_flex = { version = "0.11", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "d4f8e1902322b239be9580b3afb936c99ec49b79", features = [
  "image",
  "advanced",
  "tokio",
  "svg",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "d4f8e1902322b239be9580b3afb936c99ec49b79", features = [
  "image",
  "advanced",
  "svg",
  "debug",
  "webgl",
  "fira-sans",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
time = { version = "0.3", features = ["wasm-bindgen"] }

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
large-enum-variant = "allow"
