[package]
name = "aery_backend"
version = "0.1.0"
edition = "2021"
authors = [ "Richard Custodio <richardcustodio@pm.me>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
futures = "0.3"
aery_core = { path = "../core" }
worker = { version="0.4.2", features=['http', 'axum'] }
worker-macros = { version="0.4.2", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json", "macros"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }