[package]
name = "aery_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = "2.17"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread"] }
dotenv = "0.15"
futures = "0.3"
