[package]
name = "aery_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
dummy = []

[dependencies]
riven.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
serde.workspace = true
bitcode.workspace = true
bytes.workspace = true
lz4_flex.workspace = true