[package]
name = "aery_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aery_core = { path = "../core" }
iced = { git = "https://github.com/iced-rs/iced", rev = "89f480bdae951a31944302777b759661ec3c3e83", features = ["image", "advanced", "tokio", "svg"] }
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
image = "0.25"
serde_json = "1.0"
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
thiserror = "2.0"