[package]
name = "aery_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aery_core = { path = "../core" }
itertools = "0.14"
tracing = "0.1"
image = "0.25"
serde_json = "1.0"
dotenv_codegen = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
thiserror = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "89f480bdae951a31944302777b759661ec3c3e83", features = ["image", "advanced", "tokio", "svg"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "89f480bdae951a31944302777b759661ec3c3e83", features = ["image", "advanced", "svg", "debug", "webgl", "fira-sans"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
time = { version = "0.3", features = ["wasm-bindgen"] }
